Enhancement: Fixes horizontal alignment of select2 and text input fields in Events tab.

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -4158,12 +4158,25 @@ table.refactoring-helper td input {
 	/*border: 1px solid var(--black-opacity-125);*/
     /*border-radius: 0;*/
 }
+
+.select2-container {
+	margin-top: .25rem;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+	line-height: 2.3rem;
+}
+
 .select2-container--default .select2-selection--single,
 .select2-container--default .select2-search--dropdown .select2-search__field {
 	height: initial;
 	color: initial;
 	border-color: var(--input-field-border);
 	border-radius: .25rem;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+	top: 3px;
 }
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
